quick fixing overflowing body

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -11,6 +11,7 @@ body {
   display:flex;
   justify-content: flex-start;
   align-items: flex-start;
+  overflow:hidden;
 }
 
 main {
@@ -18,6 +19,7 @@ main {
   max-width: 50vw;
   position:relative;
   z-index:1000;
+  
 }
   h1  {
     line-height: 1.25;
